--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,9 +15,14 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.open-in-view=false
 
 
-spring.data.rest.base-path=/api
-#logger
-logging.level.root=WARN
+
+#       logger
+logging.level.root=INFO
 logging.level.org.springframework.web=DEBUG
 logging.level.com.myapp.service=INFO
 logging.file.name=myapp.log
+
+
+#       used for allowing cross-origin requests
+spring.data.rest.base-path=/api
+allowed.origins=http://localhost:4200
