--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,7 @@ logging.file.name=myapp.log
 #       used for allowing cross-origin requests
 spring.data.rest.base-path=/api
 allowed.origins=http://localhost:4200
+
+
+#       this is used so we dont have all our repo exposed to endpoint
+spring.data.rest.detection-strategy=ANNOTATED
