--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=PartsWarehouseManager
 # -- user loggin information
 spring.datasource.username=warehouseManager
 spring.datasource.password=warehouseManager
-spring.datasource.url=jdbc:mysql://localhost:3306/warehousemanagerdb
+spring.datasource.url=jdbc:mysql://localhost:3306/warehouseManagerDB
 
 
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
@@ -25,8 +25,46 @@ logging.file.name=myapp.log
 
 #       used for allowing cross-origin requests
 spring.data.rest.base-path=/api
-allowed.origins=http://localhost:4200
+allowed.origins=https://localhost:4200
 
 
 #       this is used so we dont have all our repo exposed to endpoint
 spring.data.rest.detection-strategy=ANNOTATED
+
+
+#
+okta.oauth2.client-id= add_client_id
+okta.oauth2.issuer= https://dev-03478268.okta.com/oauth2/default
+
+
+
+
+
+#keytool -genkeypair -alias bozntouran -keystore src/main/resources/bozntouran-keystore.p12 -keypass secret -storeType PKCS12 -storepass secret -keyalg RSA -keysize 2048 -validity 365 -dname "C=GR, ST = Eastern Macedonia and Thrace, L=Xanthi, O=bozntouran, OU=Training , CN=localhost" -ext "SAN=dns:localhost"
+
+#####
+#
+# HTTPS configuration
+#
+#####
+
+# Server web port
+server.port=8443
+
+# Enable HTTPS support (only accept HTTPS requests)
+server.ssl.enabled=true
+
+# Alias that identifies the key in the key store same with keystore creation
+server.ssl.key-alias=bozntouran
+
+# Keystore location same with keystore creation
+server.ssl.key-store=classpath:bozntouran-keystore.p12
+
+# Keystore password
+server.ssl.key-store-password=secret
+
+# Keystore format
+server.ssl.key-store-type=PKCS12
+
+
+stripe.key.secret = add_secret_key_from_stripe
